<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivityCelestial">

    <Button
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/iconsun"
        android:onClick="openSun"
        android:text="@string/SunIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/iconpluto"
        android:onClick="openPluto"
        android:text="@string/PlutoIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageButton4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableTop="@drawable/iconasteroid_belt"
        android:onClick="openAsteroidBelt"
        android:text="@string/AsteroidBeltIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <Button
        android:id="@+id/imageButton5"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginTop="12dp"
        android:drawableTop="@drawable/quiz"
        android:onClick="openQuizC"
        android:text="@string/QuizIconText"
        app:backgroundTint="#1AFFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
</androidx.constraintlayout.widget.ConstraintLayout>