<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivityGasGiants">

    <Button
        android:id="@+id/jupiter"
        android:layout_width="153dp"
        android:layout_height="196dp"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/iconjupiter"
        android:onClick="openJupiter"
        android:text="@string/JupiterIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/saturn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saturn"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/iconsaturn"
        android:onClick="openSaturn"
        android:text="@string/SaturnIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/jupiter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quizG"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginTop="12dp"
        android:onClick="openQuizG"
        android:drawableTop="@drawable/quiz"
        android:text="@string/QuizIconText"
        app:backgroundTint="#26FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/jupiter"
        app:layout_constraintStart_toStartOf="@+id/jupiter"
        app:layout_constraintTop_toBottomOf="@+id/jupiter" />
</androidx.constraintlayout.widget.ConstraintLayout>